--- a/Assets/style.css
+++ b/Assets/style.css
@@ -2,6 +2,21 @@
     display: none;
 }
 
+
+.tablerow {
+    display: grid;
+    justify-content: center;
+    align-items: center;
+    padding: 1em;
+    border: 1px solid black;
+    color: white;
+}
+
+.tablerow:hover {
+    background-color: purple;
+    cursor: pointer;
+}
+
 .pickTeam {
     display: grid;
     justify-content: center;
@@ -17,9 +32,4 @@
     background-color: lightgrey;
     border: solid black;
     border-radius: 2em;
-}
-
-.plzHover:hover {
-    background-color: purple;
-    cursor: pointer;
 }
