--- a/Assets/style.css
+++ b/Assets/style.css
@@ -93,10 +93,18 @@ li a:active, li a:hover {
     height: 3rem;
 }
 
+
+#map {
+    height: 250px;
+}
+
 @media (min-width: 720px){
     .greybg {
         padding: 2em .25em;
     }
+
+
+
 
 
 
