--- a/Assets/style.css
+++ b/Assets/style.css
@@ -8,14 +8,14 @@
 }
 
 .blackbg {
-    background-color: black;
-    color: white;
+    background-color:#013369;
+    color: #D50A0A;
     text-align: center;
     padding: 1em .25em;
 }
 
 .hero {
-    padding: 1em;
+    padding: 1em; 
     margin: 2em 0 3em 0;
     text-align: center;
 }
@@ -24,9 +24,43 @@
     font-size: .85em;
 }
 
+.btn {
+    padding: 1em 4em;
+    border-radius: .5em;
+}
+
+.btn-secondary {
+    background-color: #013369;
+}
+
+.btn-secondary:hover {
+    background-color: #2e4f72;
+}
+
+.section-bg {
+    background-color:  rgba(179, 179, 179, 0.8);
+    border: solid .75px #013369;
+    border-radius: 1em;
+    margin: 2em;
+}
+
+.card {
+    background-color: #013369;
+    color: #D50A0A;
+    margin-top: 1em;
+}
+
+.card-text {
+    color: white;
+}
+
 ul {
     list-style-type: none;
     padding-inline-start: 0;
+}
+
+li {
+    border-radius: .25em;
 }
 
 li a {
@@ -36,12 +70,6 @@ li a {
 li a:active, li a:hover {
     color: white;
     text-decoration: none;
-}
-
-.section-bg {
-    background-color:  rgba(179, 179, 179, 0.8);
-    border: solid black;
-    border-radius: 2em;
 }
 
 .tablerow {
@@ -70,13 +98,32 @@ li a:active, li a:hover {
 .schedule {
     display: grid;
     justify-content: center;
-    margin: 2em 3em;
     padding: 2em;
-    min-height: 50vh;
 }
 
 #risk-info {
-padding: 1em;
+    padding: 1em;
+}
+
+.riskbox {
+    padding: 1em;
+}
+
+.riskdata {
+    font-size: 1.6em;
+    text-align: center;
+}
+
+.bg-red {
+    background-color: red;
+    padding: .25em .5em;
+    border-radius: .25em;
+}
+
+.bg-yellow {
+    background-color: yellow;
+    padding: .25em .5em;
+    border-radius: .25em;
 }
 
 .footer {
@@ -86,23 +133,28 @@ padding: 1em;
     bottom: 0;
     width: 100%;
     height: 3rem;
+    color: white;
 }
-
 
 #map {
     height: 250px;
+    margin: 2em;
 }
 
 @media (min-width: 720px){
-    .greybg {
+    .blackbg {
         padding: 2em .25em;
     }
 
+    .card {
+        margin-top: 0;
+    }
 
+    .riskdata {
+        display: block; 
+    }
 
-
-
-
+    
     
 /* end media query */
 } 
